sftp-ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftpgo-ingress
  namespace: sftp-go
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sftp.kube.bupd.xyz  # Replace with your desired domain
    http:
      paths:
      - path: /  # Exposes all paths
        pathType: Prefix
        backend:
          service:
            name: sftpgo-v1
            port:
              number: 80  # Change this if you want to expose other ports, like 22 or 10000
  - host: sftp.web.kube.bupd.xyz  # Replace with your desired domain
    http:
      paths:
      - path: /  # Exposes all paths
        pathType: Prefix
        backend:
          service:
            name: sftpgo-v1
            port:
              number: 80  # Change this if you want to expose other ports, like 22 or 10000
  # Optional: Uncomment to add HTTPS support (with TLS)
  # tls:
  # - hosts:
  #   - sftpgo.example.com
  #   secretName: sftpgo-tls-secret  # Ensure you have a TLS secret in your cluster
